src/tests/variable-declarations/21.txt
variable-declarations/21.c:2:8: error: expected integer literal as array length for 'a'
 	int a["test"] = {1, 2, 3, 4, 5};
 	      ^
